# openapi.json
@@ -26,6 +26,14 @@
             "title": "Body",
             "type": "string"
           },
+          "characters": {
+            "items": {
+              "type": "string"
+            },
+            "maxItems": 2,
+            "title": "Characters",
+            "type": "array"
+          },
           "post_type": {
             "default": "자유",
             "title": "Post Type",
@@ -212,6 +220,14 @@
             "title": "Body",
             "type": "string"
           },
+          "characters": {
+            "default": [],
+            "items": {
+              "type": "string"
+            },
+            "title": "Characters",
+            "type": "array"
+          },
           "comments": {
             "default": [],
             "items": {
@@ -313,6 +329,14 @@
           "body": {
             "title": "Body",
             "type": "string"
+          },
+          "characters": {
+            "default": [],
+            "items": {
+              "type": "string"
+            },
+            "title": "Characters",
+            "type": "array"
           },
           "comment_count": {
             "default": 0,
@@ -489,6 +513,14 @@
             "title": "Body",
             "type": "string"
           },
+          "characters": {
+            "items": {
+              "type": "string"
+            },
+            "maxItems": 2,
+            "title": "Characters",
+            "type": "array"
+          },
           "post_type": {
             "title": "Post Type",
             "type": "string"
@@ -518,6 +550,7 @@
           "title",
           "body",
           "post_type",
+          "characters",
           "youtube_video_id"
         ],
         "title": "UpdatePostRequest",
@@ -858,6 +891,20 @@
                 }
               ],
               "title": "Post Type"
+            }
+          },
+          {
+            "in": "query",
+            "name": "characters",
+            "required": false,
+            "schema": {
+              "default": [],
+              "items": {
+                "type": "string"
+              },
+              "maxItems": 2,
+              "title": "Characters",
+              "type": "array"
             }
           }
         ],
